--- a/onYOURway.Client.WebApp/App/views/vonMorgenMin/_nav.html
+++ b/onYOURway.Client.WebApp/App/views/vonMorgenMin/_nav.html
@@ -8,7 +8,7 @@
         <div>
             <div class="logo">
                 <a href="#">
-                    <img src="/App/themes/vonMorgen/images/logoanimation90.gif" />
+                    <img src="/App/themes/vonMorgen/images/logo66.png" />
                 </a>
             </div>
             <div class="login">
