vonMorgenMin: reorganized css files

--- a/onYOURway.Client.WebApp/App/themes/vonMorgenMin/css/vonMorgen.less
+++ b/onYOURway.Client.WebApp/App/themes/vonMorgenMin/css/vonMorgen.less
@@ -23,10 +23,6 @@
 @accent4: @gruen;
 @selectedItem: @graublau;
 
-@import url('searchBox.less');
-@import url('siteCollector.less');
-
-
 body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
@@ -35,319 +31,11 @@ body, header, div, span, ul, ol {
     margin: 0;
 }
 
-div.searchBox {
-    width: 30%;
-}
-
-#map, .aboveMap {
-  position: absolute;
-  top: 0;
-  margin-top: 113px;
-  bottom: 0;
-  left: 0;
-  right: 0;
-}
-#map.listOpen {
-  top: 20% !important;
-}
-#map {
-    z-index: 2;
-    background-color: #ebebeb;
-    -webkit-transition: 0.3s ease-in-out;
-    -moz-transition: 0.3s ease-in-out;
-    -o-transition: 0.3s ease-in-out;
-    transition: 0.3s ease-in-out;
-}
-.aboveMap {
-    z-index: 10;
-    background-color: rgba(0, 0, 0, 0.50);
-}
-
-
-.belowMap {
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 100%;
-    z-index: 1;
-}
-
-.middle200px {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-top: -100px;
-    margin-left: -200px;
-    height: 200px;
-    width: 400px;
-    background-color: #dedddd;
-    border: 1px solid rgb(100,122,133);
-}
-
-header {
-
-    .header>div, .searchbar {
-        margin: 0 auto;
-        max-width: 1000px;
-    }
-
-    a:hover {
-        text-shadow:0 -1px 0 #000;
-    }
-
-    .header {
-        height: 70px;
-        border-bottom: 1px solid #dedddd;
-        overflow: hidden;
-
-        .navi, .login {
-            a {
-                padding: 2px 2% 5px 2%;
-                border-bottom: 1px solid #ffffff;
-                display: inline-block;
-                color: #1a1a1a;
-                text-decoration: none;
-            }
-            a:hover {
-                border-bottom: 1px solid #a1a1a1;
-            }
-        }
-
-        .navi a {
-          height: 24px;
-        }
-
-        .login {
-            text-align: right;
-            font-size: smaller;
-            padding-top: 10px;
-
-            a {
-              height: 19px;
-            }
-
-        }
-
-        .logo {
-            float: left;
-            overflow: hidden;
-            width: 180px;
-            height: 69px;
-            position: relative;
-
-            img {
-                left: 0;
-                top: 3px;
-                height: 66px;
-                width: 181px;
-                position: absolute;
-            }
-        }
-    }
-
-    .searchbar {
-        clear: both;
-        font-size: smaller;
-        vertical-align: bottom;
-        padding-top: 8px;
-
-        a.btn, .categories a {
-            border-left: 1px solid #dedddd;
-        }
-        a.btn.pos {
-            border-right: 1px solid #dedddd;
-        }
-
-        a.btn, .searchBoxButton {
-            display: inline-block;
-            color: #1a1a1a !important;
-            text-decoration: none;
-            width: 34px;
-            text-align: center;
-            vertical-align: bottom;
-            cursor: pointer;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            -ms-user-select: none;
-            -o-user-select: none;
-            user-select: none;
-        }
-
-        a.btn i, .searchBoxButton i, .categories a {
-            line-height: 32px;
-            border-bottom: 2px solid transparent;
-            height: 32px;
-            vertical-align: bottom;
-        }
-
-        a.btn i, .searchBoxButton i {
-          font-size: 18px;
-          border-bottom-color: #000000 !important;
-        }
-
-        .categories {
-            margin-right: -4px;
-            a {
-                text-align: center;
-                display: inline-block;
-            }
-            a.visible-m {
-                width: 13%;
-            }
-            a.hidden-sm {
-                width: 18%;
-            }
-
-            .initiatives {
-                border-bottom-color: #97bf0d !important;
-            }
-            .initiatives.active {
-                background-color: #97bf0d;
-                color: #ffffff !important;
-            }
-            .events {
-                border-bottom-color: #e56292 !important;
-            }
-            .events.active {
-                background-color: #e56292;
-                color: #ffffff !important;
-            }
-            .companies {
-                border-bottom-color: #009889 !important;
-            }
-            .companies.active {
-                background-color: #009889;
-                color: #ffffff !important;
-            }
-            a.initiatives.active:hover, a.events.active:hover,a.companies.active:hover {
-                text-shadow:0 -1px 0 #fff !important;
-            }
-        }
-
-
-    }
-}
-
-@media (min-width: 892px) {
-    .visible-sm, .visible-m {
-        display: none !important;
-    }
-}
-
-@media (max-width: 891px) {
-    .hidden-sm {
-        display: none !important;
-    }
-    div.searchBox {
-        width: 40%;
-    }
-}
-
-@media (min-width: 620px) {
-    .visible-s {
-        display: none !important;
-    }
-    @media (max-width: 891px) {
-        .hidden-m {
-            display: none !important;
-        }
-        div.searchBox {
-            width: 40%;
-        }
-    }
-}
-
-@media (max-width: 629px) {
-    .visible-m, .hidden-s {
-        display: none !important;
-    }
-    div.searchBox {
-        width: 52%;
-    }
-}
-
-div#placesList ul {
-  position: absolute;
-  top: 113px;
-  bottom: 0px;
-  left: 0px;
-  right: 0px;
-  height: 20%;
-  z-index: 3;
-  background-color: rgb(255, 255, 255);
-  box-shadow: 0px 3px 3px -3px inset;
-  overflow-y: hidden;
-  overflow-x: scroll;
-  @media (min-width: 770px) {
-    column-width: 246px;
-    -moz-column-width: 246px;
-    -webkit-column-width: 246px;
-  }
-  @media (max-width: 769px) {
-    column-width: 146px;
-    -moz-column-width: 146px;
-    -webkit-column-width: 146px;
-  }
-  column-gap: 1px;
-  -moz-column-gap: 1px;
-  -webkit-column-gap: 1px;
-  column-rule: 1px solid transparent;
-  -moz-column-rule: 1px solid transparent;
-  -webkit-column-rule: 1px solid transparent;
-  padding: 6px 12px 0 12px;
-
-  li {
-    list-style: outside none none;
-    display: inline-block;
-    margin: 4px 0 0 0;
-    padding: 4px 0 4px 0 ;
-    border-bottom: 1px solid #a1a1a1;
-    @media (min-width: 770px) {
-      width: 235px;
-    }
-    @media (max-width: 769px) {
-      width: 135px;
-    }
-    height: 34px;
-    overflow: hidden;
-
-    i:first-child {
-      float: left;
-      line-height: 34px;
-      padding: 0;
-      margin: 0;
-      height: 34px;
-    }
-
-    h5, p {
-      margin: 0;
-      @media (min-width: 770px) {
-        width: 200px;
-      }
-      @media (max-width: 769px) {
-        width: 100px;
-      }
-      overflow: hidden;
-      text-overflow: ellipsis;
-      padding: 0 0 0 12px;
-      white-space: nowrap;
-    }
-
-    h5 {
-      text-transform: uppercase;
-      font-size: medium;
-      font-weight: normal;
-      margin-bottom: -3px !important;
-    }
-
-    p {
-      font-size: x-small;
-      color: #a1a1a1;
-    }
-
-  }
-  li.selected {
-    background-color: #CCCCCC;
-  }
-
-}
+@import url('_responsive.less');
+@import url('_map.less');
+@import url('_nav.less');
+@import url('home.less');
+@import url('components/searchBox.less');
+@import url('my/siteCollector.less');
+@import url('searchResults/placesList.less');
+@import url('searchResults/placePreview.less');
