--- a/onYOURway.Client.WebApp/App/views/vonMorgenMin/searchResults.html
+++ b/onYOURway.Client.WebApp/App/views/vonMorgenMin/searchResults.html
@@ -14,6 +14,7 @@
         </ul>
     </div>
 
+<!--ko if: $root.selectedPlace() -->
     <div id="placePreview" data-bind="with: selectedPlace">
 
         <div class="ventureDetails-imageArea">
@@ -55,5 +56,5 @@
         </div>
 
     </div>
-
+<!--/ko-->
 </div>
