--- a/onYOURway.Client.WebApp/App/themes/vonMorgenMin/css/components/searchBox.less
+++ b/onYOURway.Client.WebApp/App/themes/vonMorgenMin/css/components/searchBox.less
@@ -4,6 +4,9 @@
 
 div.searchBox {
   width: 30%;
+  height: 33px;
+  border-bottom: 2px solid black !important;
+  overflow: hidden;
 }
 
 div.searchBoxSuggestion {
@@ -35,10 +38,7 @@ div.searchBoxSuggestion {
 }
 
 ul.select2-choices {
-    border-top: none !important;
-    border-left: none !important;
-    border-right: none !important;
+    border: none !important;
     background-image: none !important;
-    border-bottom: 2px solid black !important;
     padding-bottom: 2px !important;
 }
