--- a/onYOURway.Client.WebApp/App/_styles/select2.css
+++ b/onYOURway.Client.WebApp/App/_styles/select2.css
@@ -495,6 +495,7 @@ html[dir="rtl"] .select2-container-multi .select2-choices li
     -webkit-box-shadow: none;
             box-shadow: none;
     background: transparent !important;
+    text-align: center;
 }
 
 .select2-container-multi .select2-choices .select2-search-field input.select2-active {
