vonMorgenMin: create new Component for the tag selection in navigation

--- a/onYOURway.Client.WebApp/App/themes/vonMorgenMin/css/_nav.less
+++ b/onYOURway.Client.WebApp/App/themes/vonMorgenMin/css/_nav.less
@@ -65,14 +65,14 @@ header {
     vertical-align: bottom;
     padding-top: 8px;
 
-    a.btn, .categories a {
+    a.btn {
       border-left: 1px solid #dedddd;
     }
     a.btn.pos {
       border-right: 1px solid #dedddd;
     }
 
-    a.btn, .searchBoxButton {
+    a.btn {
       display: inline-block;
       color: #1a1a1a !important;
       text-decoration: none;
@@ -87,57 +87,19 @@ header {
       user-select: none;
     }
 
-    a.btn i, .searchBoxButton i, .categories a {
+    a.btn i {
       line-height: 32px;
-      border-bottom: 2px solid transparent;
       height: 32px;
       vertical-align: bottom;
-    }
-
-    a.btn i, .searchBoxButton i {
       font-size: 18px;
       border-bottom-color: #000000 !important;
     }
 
-    .categories {
-      margin-right: -4px;
-      a {
-        text-align: center;
-        display: inline-block;
-      }
-      a.visible-m {
-        width: 13%;
-      }
-      a.hidden-sm {
-        width: 18%;
-      }
-
-      .initiatives {
-        border-bottom-color: #97bf0d !important;
-      }
-      .initiatives.active {
-        background-color: #97bf0d;
-        color: #ffffff !important;
-      }
-      .events {
-        border-bottom-color: #e56292 !important;
-      }
-      .events.active {
-        background-color: #e56292;
-        color: #ffffff !important;
-      }
-      .companies {
-        border-bottom-color: #009889 !important;
-      }
-      .companies.active {
-        background-color: #009889;
-        color: #ffffff !important;
-      }
-      a.initiatives.active:hover, a.events.active:hover,a.companies.active:hover {
-        text-shadow:0 -1px 0 #fff !important;
-      }
+    span.tagSelection {
+      display: inline-block;
+      vertical-align: bottom;
+      height: 34px;
     }
-
 
   }
 }
