--- a/onYOURway.Client.WebApp/App/themes/vonMorgenMin/css/vonMorgen.less
+++ b/onYOURway.Client.WebApp/App/themes/vonMorgenMin/css/vonMorgen.less
@@ -66,6 +66,7 @@ body, header, div, span, ul, ol {
 @import url('_nav.less');
 @import url('home.less');
 @import url('components/searchBox.less');
+@import url('components/tagSelection.less');
 @import url('my/siteCollector.less');
 @import url('searchResults/placesList.less');
 @import url('searchResults/placePreview.less');
