--- a/onYOURway.Client.WebApp/App/views/vonMorgenMin/home.html
+++ b/onYOURway.Client.WebApp/App/views/vonMorgenMin/home.html
@@ -6,13 +6,7 @@
                 <h2>Alles Gute auf einer Karte</h2>
             </div>
             <div data-bind="component: 'searchBox'"><!-- searchBox --></div>
-            <span class="categories">
-                <a class="initiatives hidden-sm active">Initiativen &amp; Inspirationen
-                </a><a class="initiatives visible-m active">Initiativen
-            </a><a class="events hidden-sm">Events &amp; Begegnungen
-            </a><a class="events visible-m">Events
-            </a><a class="companies hidden-sm">Unternehmen &amp; Einkaufen
-            </a><a class="companies visible-m">Unternehmen</a>
+            <div class="tagSelection" data-bind="component: 'tagSelection'"><!-- tagSelection --></div>
             </span>
 
         </div>
