--- a/onYOURway.Client.WebApp/App/themes/vonMorgenMin/css/components/tagSelection.less
+++ b/onYOURway.Client.WebApp/App/themes/vonMorgenMin/css/components/tagSelection.less
@@ -1,6 +1,10 @@
 .tagSelection {
+  a.initiatives:hover, a.events:hover, a.companies:hover, .initiatives li:hover, .events li:hover, .companies li:hover {
+    text-shadow: 0 -1px 0 #000;
+  }
+
   .categories {
-    margin-right: -4px;
+    white-space: nowrap;
 
     a {
       text-align: center;
@@ -12,33 +16,78 @@
       vertical-align: bottom;
       border-left: 1px solid #dedddd;
     }
-
     .initiatives {
       border-bottom-color: #97bf0d !important;
       width: 33%;
-    }
-    .initiatives.active {
-      background-color: #97bf0d;
-      color: #ffffff !important;
     }
     .events {
       border-bottom-color: #e56292 !important;
       width: 33%;
     }
-    .events.active {
-      background-color: #e56292;
-      color: #ffffff !important;
-    }
     .companies {
       border-bottom-color: #009889 !important;
       width: 34%;
     }
-    .companies.active {
+    .active.initiatives, .initiatives .active span {
+      background-color: #97bf0d;
+      color: #ffffff !important;
+    }
+    .active.events, .events .active span {
+      background-color: #e56292;
+      color: #ffffff !important;
+    }
+    .active.companies, .companies .active span {
       background-color: #009889;
       color: #ffffff !important;
     }
-    a.initiatives.active:hover, a.events.active:hover, a.companies.active:hover {
+  }
+  .categories, .tags {
+    .active:hover {
       text-shadow: 0 -1px 0 #fff !important;
     }
+  }
+
+  .tags {
+    white-space: nowrap;
+
+    div {
+      display:inline-block;
+      width: 33%;
+      box-sizing: border-box;
+      vertical-align: top;
+      text-align: center;
+      ul {
+        display: inline-block;
+        list-style-type: none;
+        padding: 0;
+        text-align: left;
+        min-width: 80%;
+        max-width: 100%;
+
+        li {
+          display: block;
+          padding: 4px;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          max-width: 100%;
+
+          span {
+            padding: 1px 3px;
+            border-radius: 1px;
+          }
+        }
+
+        li.active {
+          span {
+            background-color: @black;
+            color: @white;
+          }
+        }
+      }
+    }
+  }
+
+  .clear {
+    clear: both;
   }
 }
