--- a/onYOURway.Client.WebApp/App/views/vonMorgenMin/_nav.html
+++ b/onYOURway.Client.WebApp/App/views/vonMorgenMin/_nav.html
@@ -36,7 +36,7 @@
 
             <span class="tagSelection" data-bind="component: 'tagSelection'"><!-- tagSelection --></span>
 
-            <a class="btn" tabindex="-1" data-bind=""> <i class="fa fa-fw fa-bars"></i></a>
+            <a class="btn" tabindex="-1" data-bind="click: toggleTagSelection"> <i class="fa fa-fw fa-bars"></i></a>
 
         </form>
     </div>
