--- a/onYOURway.Client.WebApp/App/views/vonMorgenMin/home.html
+++ b/onYOURway.Client.WebApp/App/views/vonMorgenMin/home.html
@@ -1,6 +1,6 @@
 ﻿<div id="home">
     <div class="aboveMap">
-        <div class="searchPopup" data-bind="click: enableMap">
+        <div class="searchPopup">
             <div class="popupHeader">
                 <a href="#map" class="close"><i class="fa fa-fwd fa-close"></i></a>
                 <h2>Alles Gute auf einer Karte</h2>
