--- a/onYOURway.Client.WebApp/App/themes/vonMorgenMin/css/components/tagSelection.less
+++ b/onYOURway.Client.WebApp/App/themes/vonMorgenMin/css/components/tagSelection.less
@@ -15,6 +15,7 @@
       height: 34px;
       vertical-align: bottom;
       border-left: 1px solid #dedddd;
+      cursor: pointer;
     }
     .initiatives {
       border-bottom-color: #97bf0d !important;
@@ -70,6 +71,7 @@
           overflow: hidden;
           text-overflow: ellipsis;
           max-width: 100%;
+          cursor: pointer;
 
           span {
             padding: 1px 3px;
